tests/negative/Test20.sp
(* Testing wrong name for variable *)
3pi:Int = 2;
(* pi3:Int = pi; *)